[package]
name = "mnempass"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Hello, mnempass!"
homepage = "https://github.com/mnempass/mnempass"
repository = "https://github.com/mnempass/mnempass"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
